api/cs/Indigo.cs


      [DllImport("indigo.dll")]
      public static extern int indigoExtractCommonScaffold (int structures, string options);
      [DllImport("indigo.dll")]
      public static extern int indigoAllScaffolds (int extracted);

      [DllImport("indigo.dll")]
      public static extern int indigoDecomposeMolecules (int scaffold, int structures);
      [DllImport("indigo.dll")]
      public static extern int indigoDecomposedMoleculeScaffold (int decomp);
      [DllImport("indigo.dll")]
      public static extern int indigoIterateDecomposedMolecules (int decomp);
      [DllImport("indigo.dll")]
      public static extern int indigoDecomposedMoleculeHighlighted (int decomp);
      [DllImport("indigo.dll")]
      public static extern int indigoDecomposedMoleculeSubstituents (int decomp);
      [DllImport("indigo.dll")]
      public static extern int indigoDecomposedMoleculeWithRGroups (int decomp);

      [DllImport("indigo.dll")]
      public static extern int indigoNext (int iter);
      [DllImport("indigo.dll")]
      public static extern int indigoIndex (int item);

      [DllImport("indigo.dll")]
      public static extern sbyte * indigoToString (int handle);
      [DllImport("indigo.dll")]
      public static extern int indigoToBuffer (int handle, byte **buf, int *size);

      [DllImport("indigo.dll")]
      public static extern int indigoReactionProductEnumerate (int reaction, int monomers);
   }
}
